--- a/Startseite.html
+++ b/Startseite.html
@@ -20,7 +20,8 @@
 </head>
 <body>
   <h1>Willkommen auf meiner Website</h1>
-  <p>Hier werden meine Bergtouren beschrieben</p>
-  <p>Lesen, Zeug packen und selbst erleben :)</p>
+  <p>Hier werden meine Bergtouren beschrieben
+  	Lesen, Zeug packen und selbst erleben :)
+  <p>
 </body>
 </html>
