--- a/Startseite.html
+++ b/Startseite.html
@@ -19,9 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>Willkommen auf meiner Website</h1>
-  <p>Hier werden meine Bergtouren beschrieben
-  	Lesen, Zeug packen und selbst erleben :)
-  <p>
+  <h1>Willkommen auf meiner privaten Website</h1>
+  <p>Diese Seite ist nur zu Übungszwecken erstellt ??</p>
 </body>
 </html>
