--- a/touren.html
+++ b/touren.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tourenberichte – Meine Bergabenteuer</title>
+  <title>Tourenberichte â€“ Meine Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,25 +13,25 @@
       <a href="index.html">Start</a>
       <a href="touren.html">Tourenberichte</a>
       <a href="galerie.html">Galerie</a>
-      <a href="about.html">Über mich</a>
+      <a href="about.html">Ãœber mich</a>
     </nav>
   </header>
 
   <main>
     <h2>Tourenberichte</h2>
-    <p>Hier kannst du meine verschiedenen Touren auswählen:</p>
+    <p>Hier kannst du meine verschiedenen Touren auswÃ¤hlen:</p>
 
     <div class="tour-liste">
-      <a class="btn" href="tour1.html">Tour 1 – Hochkönig</a>
-      <a class="btn" href="tour2.html">Tour 2 – Watzmann</a>
-      <a class="btn" href="tour3.html">Tour 3 – Großglockner</a>
-      <a class="btn" href="tour4.html">Tour 4 – Dachstein</a>
-      <a class="btn" href="tour5.html">Tour 5 – Karwendel</a>
+      <a class="btn" href="tour1.html">Tour 1 â€“ HochkÃ¶nig</a>
+      <a class="btn" href="tour2.html">Tour 2 â€“ Watzmann</a>
+      <a class="btn" href="tour3.html">Tour 3 â€“ GroÃŸglockner</a>
+      <a class="btn" href="tour4.html">Tour 4 â€“ Dachstein</a>
+      <a class="btn" href="tour5.html">Tour 5 â€“ Karwendel</a>
     </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 – Meine Bergabenteuer</p>
+    <p>&copy; 2025 â€“ Meine Bergabenteuer</p>
   </footer>
 </body>
 </html>
