--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Kurze Info über mich</h1>
+    <h1>Über mich</h1>
     <nav>
       <a href="index.html">Start</a>
       <a href="touren.html">Tourenberichte</a>
@@ -18,10 +18,10 @@
   </header>
 
   <main>
-    <h2>Tourenberichte</h2>
+    <h2>Ein kurzes Updtae zu meiner Persöhnlichkeit:</h2>
     <p>Hallo</p>
     <p>Ich heiße Fabian und bin 1998 geboren.</p>
-    <p>Meine Leidenschaft zu den Bergen ist riesig und genau diese möchte ich gerni mit Euch teilen!</p>
+    <p>Meine Leidenschaft zu den Bergen ist riesig und genau diese möchte ich gerne mit Euch teilen!</p>
   </main>
 
   <footer>
