--- a/tour1.html
+++ b/tour1.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tour 1 – Hochkönig | Meine Bergabenteuer</title>
+  <title>Zellerhütte - Warscheneck - Dümmlerhütte | Meine Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Header -->
   <header>
-    <h1>Meine Bergabenteuer</h1>
+    <h1>Fabian's Bergabenteuer</h1>
     <nav>
       <a href="index.html">Start</a>
       <a href="touren.html" aria-current="page">Tourenberichte</a>
@@ -20,9 +20,13 @@
 
   <!-- Hauptinhalt -->
   <main>
-    <h2>Tour 1 – Hochkönig</h2>
-    <p>Unsere erste Tour führt auf den majestätischen Hochkönig. Hier erwarten uns herrliche Ausblicke, alpine Wege und beeindruckende Gipfelerlebnisse.</p>
-
+    <!--<h2>Tour 1 – Hochkönig</h2>-->
+    <p>Die Tour wurde auf 3 Tage aufgeteilt, kann aber auch in weniger absolviert werden.</p>
+    <h2>Tag 1</h2>
+    <h3>Tag 1</h3>
+    <p>Dies Roundtour führt euch zum Gleinkersee nach Roßleithen und von dort aus auf die Zellerhütte.</p>
+    <p>Auf dieser erwartet euch ein extrem freunldiches und junges Hüttenteam welche euch herzlich willkommen heißen werden.</p>
+    <p>Eine Übernachtung ist ebenfalls möglich. Hier empfiehlt es sich im Vorhinein zu reservieren (auch online möglich)</p>
     <!-- Platzhalterbild -->
     <img src="assets/img/placeholder1.jpg" alt="Blick auf den Hochkönig">
 
