--- a/touren.html
+++ b/touren.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Meine Bergabenteuer</h1>
+    <h1>Fabian's Bergabenteuer</h1>
     <nav>
       <a href="index.html">Start</a>
       <a href="touren.html">Tourenberichte</a>
@@ -22,7 +22,7 @@
     <p>Hier kannst du meine verschiedenen Touren auswählen:</p>
 
     <div class="tour-liste">
-      <a class="btn" href="tour1.html">Tour 1 – Hochkönig</a>
+      <a class="btn" href="tour1.html">Zellerhütte - Warscheneck - Dümmlerhütte</a>
       <a class="btn" href="tour2.html">Tour 2 – Watzmann</a>
       <a class="btn" href="tour3.html">Tour 3 – Großglockner</a>
       <a class="btn" href="tour4.html">Tour 4 – Dachstein</a>
