--- a/index.html
+++ b/index.html
@@ -3,29 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meine Bergabenteuer</title>
+  <title>Fabian's Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Willkommen zu meinen Bergabenteuern</h1>
+    <h1>Willkommen zu Fabian's Bergabenteuern</h1>
     <nav>
       <a href="index.html">Start</a>
       <a href="touren.html">Tourenberichte</a>
       <a href="galerie.html">Galerie</a>
-      <a href="about.html">Ãœber mich</a>
+      <a href="about.html">Über mich</a>
     </nav>
   </header>
 
   <main>
-    <h2>Hallo</h2>
-    <p>Hier teile ich meine Abenteuer in den Bergen â€“ mit Geschichten, Bildern und Tourendaten.</p>
-    <p>Lesen, Zeug packen und selbst erleben</p>
+    <h2>Hallo!</h2>
+    <p>Hier teile ich meine Abenteuer in den Bergen – mit Geschichten, Bildern und Tourendaten.</p>
   </main>
 
   <footer>
-    <p>&copy; 2025 â€“ Meine Bergabenteuer</p>
+    <p>&copy; 2025 – Meine Bergabenteuer</p>
   </footer>
 </body>
 </html>
-
