--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
       <a href="index.html">Start</a>
       <a href="touren.html">Tourenberichte</a>
       <a href="galerie.html">Galerie</a>
-      <a href="about.html">Über mich</a>
+      <a href="about.html">Ãœber mich</a>
     </nav>
   </header>
 
   <main>
     <h2>Hallo!</h2>
-    <p>Hier teile ich meine Abenteuer in den Bergen – mit Geschichten, Bildern und Tourendaten.</p>
+    <p>Hier teile ich meine Abenteuer in den Bergen â€“ mit Geschichten, Bildern und Tourendaten.</p>
   </main>
 
   <footer>
-    <p>&copy; 2025 – Meine Bergabenteuer</p>
+    <p>&copy; 2025 â€“ Meine Bergabenteuer</p>
   </footer>
 </body>
 </html>
