--- a/tour1.html
+++ b/tour1.html
@@ -20,24 +20,30 @@
 
   <!-- Hauptinhalt -->
   <main>
-    <!--<h2>Tour 1 – Hochkönig</h2>-->
-    <p>Die Tour wurde auf 3 Tage aufgeteilt, kann aber auch in weniger absolviert werden.</p>
-    <h2>Tag 1</h2>
+    <!--<h2>Tour 1 – Hochkönig</h2>   so wird eine Überschrift 2. Ordnung geschrieben, mit h3 wird es zu einer 3. Ordnung--> 
+    <!-- <p></p> so wird eine normale Zeile eingefügt -->
+    <h3>Zellerhütte - Warscheneck - Dümmlerhütte</h3>
+    
+    <p>Die Tour wurde auf 3 Tage aufgeteilt, kann aber natürlich auch in weniger absolviert werden.</p>
+    
     <h3>Tag 1</h3>
-    <p>Dies Roundtour führt euch zum Gleinkersee nach Roßleithen und von dort aus auf die Zellerhütte.</p>
-    <p>Auf dieser erwartet euch ein extrem freunldiches und junges Hüttenteam welche euch herzlich willkommen heißen werden.</p>
-    <p>Eine Übernachtung ist ebenfalls möglich. Hier empfiehlt es sich im Vorhinein zu reservieren (auch online möglich)</p>
+    <p>Ausgangspunkt ist der Parkplatz am Gleinkersee. Dieser ist gleichzeitig auch der Endpunkt des Rundgangs</p>
+    <p>Wir folgen den Wegpfeilern Richtung Roßleithen welche uns über Schotterstraßen bzw. asphaltierte Straßen zum Einstieg des Wadnerwegs zur Zellerhütte führen welcher in der Nähe des Sensenwerkes Fuchs liegt</p>
+    <p>Von dort aus geht es dann anfangs relativ entspannt durch den Wald aufwärts.</p>
+    <p>Nach ca. 1,5h Stunden wird es dann leicht steiler und auch felsiger bis man schlussendlich die Zellerhütte erreicht</p>
+    <p>Das Ziel von Tag 1 war erreicht und einem gemütlichen Hüttenabend stand nichts mehr im Wege</p>
     <!-- Platzhalterbild -->
     <img src="assets/img/placeholder1.jpg" alt="Blick auf den Hochkönig">
 
     <!-- Weitere Details / Highlights -->
     <section>
-      <h3>Details der Tour</h3>
+      <h4>Details der Tour</h4>
       <ul>
-        <li>Höhenmeter: 1.200 m</li>
-        <li>Dauer: ca. 6 Stunden</li>
+        <li>Höhenmeter: 1000 m</li>
+        <li>Länge: 9.2 km</li>
+        <li>Dauer: ca. 3 Stunden</li>
         <li>Schwierigkeit: mittel</li>
-        <li>Beste Jahreszeit: Sommer</li>
+        <li>Beste Jahreszeit: Sommer oder Herbst</li>
       </ul>
     </section>
 
