--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="index.html">Start</a>
       <a href="touren.html">Tourenberichte</a>
-      <a href="galerie.html">Galerie</a>
+      <!--<a href="galerie.html">Galerie</a>-->
       <a href="about.html">Über mich</a>
     </nav>
   </header>
