--- a/tour1.html
+++ b/tour1.html
@@ -13,7 +13,7 @@
     <nav>
       <a href="index.html">Start</a>
       <a href="touren.html" aria-current="page">Tourenberichte</a>
-      <a href="galerie.html">Galerie</a>
+      <!--<a href="galerie.html">Galerie</a>-->
       <a href="about.html">Über mich</a>
     </nav>
     <!-- Leaflet CSS -->
