--- a/touren.html
+++ b/touren.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="index.html">Start</a>
       <a href="touren.html">Tourenberichte</a>
-      <a href="galerie.html">Galerie</a>
+      <!--<a href="galerie.html">Galerie</a>-->
       <a href="about.html">Über mich</a>
     </nav>
   </header>
@@ -23,10 +23,10 @@
 
     <div class="tour-liste">
       <a class="btn" href="tour1.html">Zellerhütte - Warscheneck - Dümmlerhütte</a>
-      <a class="btn" href="tour2.html">Tour 2 – Watzmann</a>
-      <a class="btn" href="tour3.html">Tour 3 – Großglockner</a>
-      <a class="btn" href="tour4.html">Tour 4 – Dachstein</a>
-      <a class="btn" href="tour5.html">Tour 5 – Karwendel</a>
+      <!--<a class="btn" href="tour2.html">Tour 2 – Watzmann</a>-->
+      <!--<a class="btn" href="tour3.html">Tour 3 – Großglockner</a>-->
+      <!--<a class="btn" href="tour4.html">Tour 4 – Dachstein</a>-->
+      <!--<a class="btn" href="tour5.html">Tour 5 – Karwendel</a>-->
     </div>
   </main>
 
