--- a/tour1.html
+++ b/tour1.html
@@ -47,6 +47,7 @@
     <!--<img src="assets/img/placeholder1.jpg" alt="Blick auf den Hochkönig">-->
     
     <!-- Start einfügen GPX Datei </-->
+    <!-- auskommentiert da es noch nicht geht
     <section>
       <h4>Kartenansicht</h4>
       <div id="map" style="height: 400px; width: 100%; border-radius: 12px;"></div>
@@ -66,7 +67,7 @@
            })
            .addTo(map);
        </script>
-    </section>
+    </section> -->
     <!-- Ende einfügen GPS Datei </-->
     <!-- Weitere Details / Highlights -->
     <section>
@@ -79,7 +80,51 @@
         <li>Beste Jahreszeit: Sommer oder Herbst</li>
       </ul>
     </section>
-
+    <!-- --------------------------------------------------------------- Tag2 --------------------------->
+    <h3>Tag 2</h3>
+    <p>Von der Zellerhütte geht es los zum erstem kleine Gipfel dem Schallerkogel. Dieser beeindruckt mit einem kleinem aber feinemGipfelkreuz und einer Atemberaubeneden Aussicht</p>
+    <p>Nach einer kurzen Pause geht es weiter zumLagelsberg welcher bereits über 2000m liegt. Hier machten wir nochmals Rast bevor es weiter zum Warscheneck ging</p>
+    <p>Am Gipfel hatte es, obwohl mir mitten imAugust oben waren, nur 1°C. Darum musste die Gipfelpause warten und nach wenigen Minuten gingen wir auch schon wieder weiter</p>
+    <p>Von nun an ging es abwärts. Aufgrund des sehr dichten Nebels übersahen wir allerdings den Toten Mann welche ebenfalls einer der vielen Gipfel auf dieser Route ist</p>
+    <p>Darum war unser nächster Stopp die Rote Wand welche mit ihrer namensgebenden Felswand beeindruckt</p>
+    <p>Nach einer kurzen Pause beim Gipfelkreuz ging es weiter abwärts zu unserm heutigen Ziel der Dümmlerhütte</p>
+    <!-- Weitere Details / Highlights -->
+    <section>
+      <h4>Details der Tour</h4>
+      <ul>
+        <li>Höhenmeter: 1000 m</li>
+        <li>Länge: 10.8 km</li>
+        <li>Dauer: ca. 6 Stunden</li>
+        <li>Schwierigkeit: mittel</li>
+        <li>Beste Jahreszeit: Sommer oder Herbst</li>
+      </ul>
+    </section>
+    <!-- --------------------------------------------------------------- Tag3 --------------------------->
+    <h3>Tag 3</h3>
+    <p>Von der Dümmlerhütte ging es talwärts zum Gleinkersee</p>
+    <p>Es würde die Möglichkeit bestehen beim Absteig noch auf den Seespitz zu gehen (Auf und Abstiegszeit insgesamt ca. 2h) </p>
+    <p>Da wir allerdings das Baden im Gleinkersee bevorzugten nahmen wir diesen Gipfel nicht mehr mit</p>
+    <!-- Weitere Details / Highlights -->
+    <section>
+      <h4>Details der Tour</h4>
+      <ul>
+        <li>Höhenmeter: 0 m</li>
+        <li>Länge: 3.6 km</li>
+        <li>Dauer: ca. 1 Stunde</li>
+        <li>Schwierigkeit: leicht</li>
+        <li>Beste Jahreszeit: Sommer oder Herbst</li>
+      </ul>
+    </section>
+    
+    <h2>Gesamtdaten der Tour</h2>
+    <ul>
+        <li>Höhenmeter: 2000 m</li>
+        <li>Länge: 23.6 km</li>
+        <li>Dauer: ca. 10 Stunden</li>
+        <li>Schwierigkeit: mittel in 3 Tagen, schwierig in 2 oder weniger Tagen</li>
+        <li>Beste Jahreszeit: Sommer oder Herbst</li>
+      </ul>
+    <!-- ------------------------------------------------------ Ende ------------------------------------------->
     <!-- Button zurück zur Tourenübersicht -->
     <div class="tour-liste">
       <a class="btn" href="touren.html">Zurück zu allen Touren</a>
