--- a/tour1.html
+++ b/tour1.html
@@ -43,32 +43,7 @@
     <p>Von dort aus geht es dann anfangs relativ entspannt durch den Wald aufwärts.</p>
     <p>Nach ca. 1,5h Stunden wird es dann leicht steiler und auch felsiger bis man schlussendlich die Zellerhütte erreicht</p>
     <p>Das Ziel von Tag 1 war erreicht und einem gemütlichen Hüttenabend stand nichts mehr im Wege</p>
-    <!-- Bild einfügen -->
-    <!--<img src="assets/img/placeholder1.jpg" alt="Blick auf den Hochkönig">-->
-    
-    <!-- Start einfügen GPX Datei </-->
-    <!-- auskommentiert da es noch nicht geht
-    <section>
-      <h4>Kartenansicht</h4>
-      <div id="map" style="height: 400px; width: 100%; border-radius: 12px;"></div>
-      <script>
-         // Karte initialisieren
-         const map = L.map('map');
-
-         // OpenStreetMap Tiles
-         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-           attribution: '&copy; OpenStreetMap-Mitwirkende'
-         }).addTo(map);
-
-         // GPX Track laden
-         new L.GPX('Gleinkersee-Zellerhütte.gpx', { async: true })
-           .on('loaded', function(e) {
-             map.fitBounds(e.target.getBounds()); // Zoom auf GPX-Track
-           })
-           .addTo(map);
-       </script>
-    </section> -->
-    <!-- Ende einfügen GPS Datei </-->
+   
     <!-- Weitere Details / Highlights -->
     <section>
       <h4>Details der Tour</h4>
@@ -124,7 +99,33 @@
         <li>Schwierigkeit: mittel in 3 Tagen, schwierig in 2 oder weniger Tagen</li>
         <li>Beste Jahreszeit: Sommer oder Herbst</li>
       </ul>
-    <!-- ------------------------------------------------------ Ende ------------------------------------------->
+    <!-- ------------------------------------------------------ Karte------------------------------------------->    
+    <!-- Start einfügen GPX Datei </-->
+    <section>
+      <h4>Kartenansicht</h4>
+      <div id="map" style="height: 400px; width: 100%; border-radius: 12px;"></div>
+      <script>
+         // Karte initialisieren
+         const map = L.map('map');
+
+         // OpenStreetMap Tiles
+         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+           attribution: '&copy; OpenStreetMap-Mitwirkende'
+         }).addTo(map);
+
+         // GPX Track laden
+         new L.GPX('Gleinkersee-Zellerhütte.gpx', { async: true })
+           .on('loaded', function(e) {
+             map.fitBounds(e.target.getBounds()); // Zoom auf GPX-Track
+           })
+           .addTo(map);
+       </script>
+    </section>
+    <!-- Ende einfügen GPS Datei </-->
+    <!-- ------------------------------------------------------ Bilder-------------------------------------------> 
+    <!-- Bild einfügen -->
+    <!--<img src="assets/img/placeholder1.jpg" alt="Blick auf den Hochkönig">-->
+    <!-- ------------------------------------------------------ Ende-------------------------------------------> 
     <!-- Button zurück zur Tourenübersicht -->
     <div class="tour-liste">
       <a class="btn" href="touren.html">Zurück zu allen Touren</a>
