--- a/tour1.html
+++ b/tour1.html
@@ -122,6 +122,13 @@
        </script>
     </section>
     <!-- Ende einfügen GPS Datei </-->
+    <!-- ------------------------------------------------------ Button zum Download der GPX-Datei------------------------------------------->  
+    <section>
+       <a href="Gleinkersee-Zellerhütte.gpx" download class="download-btn">
+          GPX-Datei herunterladen
+       </a>
+    <section>   
+    
     <!-- ------------------------------------------------------ Bilder-------------------------------------------> 
     <!-- Bild einfügen -->
     <!--<img src="assets/img/placeholder1.jpg" alt="Blick auf den Hochkönig">-->
