--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
   </header>
 
   <main>
-    <h2>Ein kurzes Updtae zu meiner Persöhnlichkeit:</h2>
+    <h2>Ein kurzes Update zu meiner Persöhnlichkeit:</h2>
     <p>Hallo</p>
     <p>Ich heiße Fabian und bin 1998 geboren.</p>
     <p>Meine Leidenschaft zu den Bergen ist riesig und genau diese möchte ich gerne mit Euch teilen!</p>
