--- a/tour1.html
+++ b/tour1.html
@@ -140,11 +140,15 @@
 
     <!-- Ende einfügen GPS Datei </-->
     <!-- ------------------------------------------------------ Button zum Download der GPX-Datei------------------------------------------->  
+    <!-- es werden 3 Buttons angezeigt -->
     <section>
-       <a href="Gleinkersee-Zellerhütte.gpx" download class="download-btn">
-          GPX-Datei herunterladen
-       </a>
-    <section>   
+  <h4>GPX-Downloads</h4>
+  <div class="download-container">
+    <a href="daten/Gleinkersee-Zellerhütte.gpx" download class="download-btn">Tour 1 herunterladen</a>
+    <a href="daten/Tag2.gpx" download class="download-btn">Tour 2 herunterladen</a>
+    <a href="daten/Tag3.gpx" download class="download-btn">Tour 3 herunterladen</a>
+  </div>
+</section> 
     
     <!-- ------------------------------------------------------ Bilder-------------------------------------------> 
     <!-- Bild einfügen -->
