--- a/tour1.html
+++ b/tour1.html
@@ -144,9 +144,9 @@
     <section>
   <h4>GPX-Downloads</h4>
   <div class="download-container">
-    <a href="daten/Gleinkersee-Zellerhütte.gpx" download class="download-btn">Tour 1 herunterladen</a>
-    <a href="daten/Tag2.gpx" download class="download-btn">Tour 2 herunterladen</a>
-    <a href="daten/Tag3.gpx" download class="download-btn">Tour 3 herunterladen</a>
+    <a href="daten/Gleinkersee-Zellerhütte.gpx" download class="download-btn">GPX Tag 1</a>
+    <a href="daten/Tag2.gpx" download class="download-btn">GPX Tag 2</a>
+    <a href="daten/Tag3.gpx" download class="download-btn">GPX Tag 3</a>
   </div>
 </section> 
     
