--- a/about.html
+++ b/about.html
@@ -20,8 +20,10 @@
   <main>
     <h2>Ein kurzes Update zu meiner Persöhnlichkeit:</h2>
     <p>Hallo</p>
-    <p>Ich heiße Fabian und bin 1998 geboren.</p>
-    <p>Meine Leidenschaft zu den Bergen ist riesig und genau diese möchte ich gerne mit Euch teilen!</p>
+    <p>Ich heiße Fabian und bin sehrr gerne in den Bergen unterwegs.</p>
+    <p>Großteils bin ich in den Bergen rund um den Attersee oder den Traunsee untweregs.</p>
+    <p>Die GPX Datein, welche zum Download bereitgestellt werden, wurden alle von mir persöhnlich aufgenommen. Leicht Abweichungen sind natürlich möglich.</p>
+    <p>Meine Zeitangeben richten sich nicht nach den angegebenen Zeiten sondern nach jener Zeit welche für einen normalen Bergsteiger realistisch sind. D.h. allerdings auch das Anfänger oder Genusswanderer immer etwas mehr einplanen sollten.</p>
   </main>
 
   <footer>
