--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <main>
     <h2>Hallo!</h2>
     <p>Hier teile ich meine Abenteuer in den Bergen – mit Geschichten, Bildern und Tourendaten.</p>
+    <p>Die meisten der angeführten Touren befinden sich im schönene Salzkammergut.</p>
   </main>
 
   <footer>
