--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Über mich</h1>
+    <h1>Fabian's Bergabenteuer</h1>
     <nav>
       <a href="index.html">Start</a>
       <a href="touren.html">Tourenberichte</a>
