--- a/tour1.html
+++ b/tour1.html
@@ -144,9 +144,9 @@
     <section>
   <h4>GPX-Downloads</h4>
   <div class="download-container">
-    <a href="Gleinkersee-Zellerhütte.gpx" download class="download-btn">GPX Tag 1</a>
-    <a href="Tag2.gpx" download class="download-btn">GPX Tag 2</a>
-    <a href="Tag3.gpx" download class="download-btn">GPX Tag 3</a>
+    <a href="assets/Warscheneck/Gleinkersee-Zellerhütte.gpx" download class="download-btn">GPX Tag 1</a>
+    <a href="assets/Warscheneck/Tag2.gpx" download class="download-btn">GPX Tag 2</a>
+    <a href="assets/Warscheneck/Tag3.gpx" download class="download-btn">GPX Tag 3</a>
   </div>
 </section> 
     
