--- a/tour1.html
+++ b/tour1.html
@@ -119,9 +119,9 @@
 
        // Mehrere GPX-Dateien einbinden
        const tracks = [
-         "Gleinkersee-Zellerhütte.gpx",
-         "Tag2.gpx",
-         "Tag3.gpx"
+         "assets/Warscheneck/Gleinkersee-Zellerhütte.gpx",
+         "assets/Warscheneck/Tag2.gpx",
+         "assets/Warscheneck/Tag3.gpx"
        ];
 
        tracks.forEach(file => {
