--- a/tour2.html
+++ b/tour2.html
@@ -35,12 +35,12 @@
     <!-- <p></p> so wird eine normale Zeile eingefügt -->
     <h3>Geißwand</h3>
     
-    <p>Ausgangspunkt in Traunkirchen. Von Gmunden kommend vor dem Geißwandtunnel links abbiegen und richtung Traunkirchen fahren.</p>
-    <p>nach 1-2 km sieht man links auf der Seeseite einen kostenpflichtigen Parkplatz bei dem man alerdings auch rechts in eine 180° Kehre einbiegen kann</p>
+    <p>Ausgangspunkt ist in Traunkirchen. Von Gmunden kommend vor dem Geißwandtunnel links abbiegen und richtung Traunkirchen fahren.</p>
+    <p>nach 1-2 km sieht man links auf der Seeseite einen kostenpflichtigen Parkplatz bei dem man allerdings auch rechts in eine 180° Kehre einbiegen kann</p>
     <p>Die Schotterstraße kurz hochfahren und schon ist man auf einem gebührenfreiem Parkplatz</p>
     <p>Vom Parkplatz aus nach rechts in den Wald gehen erreicht man gleich einen Wanderweg</p>
-    <p>Anfangs ist der weg relativ steil bis man zu einer kleinen Kapelle kommt. Dort hält man sich dann rechts. Hier wird der WEg erstmal immer flacher</p>
-    <p>Wenn man bei der Abzweigung angekommen ist welche links in den Wald hinaufführt wird der Weg erneut steiler</p>
+    <p>Anfangs ist der weg relativ steil bis man zu einer kleinen Kapelle kommt. Dort hält man sich dann rechts. Hier wird der Weg erstmal immer flacher</p>
+    <p>Bei der beschilderten Abzweigung welche links in den Wald hinaufführt wird der Weg erneut steiler</p>
     <p>Kurz vor dem Gipfel erreicht man eine Atemberaubende Felswand mit einigen Kletterrouten</p>
     <p>Danach sind es nur noch wenige Meter bis man schließlich noch eine kurze Kraxxlpassage erreicht welche direkt zum kleinen aber feinem Gipfelkreuz führt.</p>
     <!-- Weitere Details / Highlights -->
@@ -58,7 +58,7 @@
 
     <!-- ------------------------------------------------------ Karte------------------------------------------->    
     <!-- Start einfügen GPX Datei </-->
-   <!--<section>
+   <section>
      <h4>Kartenansicht</h4>
      <div id="map" style="height: 400px; width: 100%; border-radius: 12px;"></div>
 
@@ -76,9 +76,7 @@
 
        // Mehrere GPX-Dateien einbinden
        const tracks = [
-         "Gleinkersee-Zellerhütte.gpx",
-         "Tag2.gpx",
-         "Tag3.gpx"
+         "assets/Geißwand/Geißwand.gpx"
        ];
 
        tracks.forEach(file => {
@@ -94,7 +92,6 @@
        });
      </script>
    </section>
--->
     <!-- Ende einfügen GPS Datei </-->
     <!-- ------------------------------------------------------ Button zum Download der GPX-Datei------------------------------------------->  
     <!-- es werden 3 Buttons angezeigt -->
