--- a/assets/Geisswand/tour2.html
+++ b/assets/Geisswand/tour2.html
@@ -6,7 +6,7 @@
   <title>Geißwand | Meine Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="geisswand">   <!-- durch class= wird das Hintergrundbild auf der Geisswandseite abgeändert, Klasse muss im style konfiguriert sein-->
   <!-- Header -->
   <header>
     <h1>Fabian's Bergabenteuer</h1>
