--- a/tour1.html
+++ b/tour1.html
@@ -6,7 +6,7 @@
   <title>Zellerhütte - Warscheneck - Dümmlerhütte | Meine Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="Warscheneck">
   <!-- Header -->
   <header>
     <h1>Fabian's Bergabenteuer</h1>
