--- a/tour1.html
+++ b/tour1.html
@@ -121,7 +121,10 @@
        const tracks = [
          "assets/Warscheneck/Gleinkersee-Zellerhütte.gpx",
          "assets/Warscheneck/Tag2.gpx",
-         "assets/Warscheneck/Tag3.gpx"
+         "assets/Warscheneck/Tag3.gpx",
+         "assets/Warscheneck/Tag1.kml",
+         "assets/Warscheneck/Tag2.kml",
+         "assets/Warscheneck/Tag3.kml"
        ];
 
        tracks.forEach(file => {
@@ -142,11 +145,14 @@
     <!-- ------------------------------------------------------ Button zum Download der GPX-Datei------------------------------------------->  
     <!-- es werden 3 Buttons angezeigt -->
     <section>
-  <h4>GPX-Downloads</h4>
+  <h4>Downloads</h4>
   <div class="download-container">
     <a href="assets/Warscheneck/Gleinkersee-Zellerhütte.gpx" download class="download-btn">GPX Tag 1</a>
     <a href="assets/Warscheneck/Tag2.gpx" download class="download-btn">GPX Tag 2</a>
     <a href="assets/Warscheneck/Tag3.gpx" download class="download-btn">GPX Tag 3</a>
+    <a href="assets/Warscheneck/Tag1.kml" download class="download-btn">KML Tag 1</a>
+    <a href="assets/Warscheneck/Tag2.kml" download class="download-btn">KML Tag 2</a>
+    <a href="assets/Warscheneck/Tag3.kml" download class="download-btn">KML Tag 3</a>
   </div>
 </section> 
     
