--- a/tour2.html
+++ b/tour2.html
@@ -76,7 +76,8 @@
 
        // Mehrere GPX-Dateien einbinden
        const tracks = [
-         "assets/Geisswand/Geisswand.gpx"
+         "assets/Geisswand/Geisswand.gpx",
+         "assets/Geisswand/Geisswand.kml"
        ];
 
        tracks.forEach(file => {
@@ -98,6 +99,7 @@
  <h4>GPX-Downloads</h4>
   <div class="download-container">
     <a href="assets/Geisswand/Geisswand.gpx" download class="download-btn">GPX Tag 1</a>
+    <a href="assets/Geisswand/Geisswand.kml" download class="download-btn">KML Tag 1</a>
   </div>
     
     <!-- ------------------------------------------------------ Bilder------------------------------------------>  
