--- a/tour3.html
+++ b/tour3.html
@@ -9,7 +9,7 @@
 <body class="katzenstein">   <!-- durch class= wird das Hintergrundbild auf der Geisswandseite abgeändert, Klasse muss im style konfiguriert sein-->
   <!-- Header -->
   <header>
-    <h1>Fabian's Bergabenteuer</h1>
+    <h1>Katzenstein via Grünberg</h1>
     <nav>
       <a href="index.html">Start</a>
       <a href="touren.html" aria-current="page">Tourenberichte</a>
@@ -33,7 +33,7 @@
   <main>
     <!--<h2>Tour 1 – Hochkönig</h2>   so wird eine Überschrift 2. Ordnung geschrieben, mit h3 wird es zu einer 3. Ordnung--> 
     <!-- <p></p> so wird eine normale Zeile eingefügt -->
-    <h3>Katzenstein via Grünberg</h3>
+    <!--<h3>Katzenstein via Grünberg</h3>-->
     
     <p>Ausgangs und Endpunkt ist der Parkplatz der Grünbergbahn. Dies ist ein Gebührenpflichtiger Parkplatz</p>
     <p>Über den Ortnersteig geht es auf den Grünberg</p>
