--- a/tour1.html
+++ b/tour1.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zellerhütte - Warscheneck - Dümmlerhütte | Meine Bergabenteuer</title>
+  <title>Warscheneck Überschreitung | Meine Bergabenteuer</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="Warscheneck">
   <!-- Header -->
   <header>
-    <h1>Fabian's Bergabenteuer</h1>
+    <h1>Warscheneck Überschreitung</h1>
     <nav>
       <a href="index.html">Start</a>
       <a href="touren.html" aria-current="page">Tourenberichte</a>
@@ -33,7 +33,7 @@
   <main>
     <!--<h2>Tour 1 – Hochkönig</h2>   so wird eine Überschrift 2. Ordnung geschrieben, mit h3 wird es zu einer 3. Ordnung--> 
     <!-- <p></p> so wird eine normale Zeile eingefügt -->
-    <h3>Zellerhütte - Warscheneck - Dümmlerhütte</h3>
+    <!--<h3>Zellerhütte - Warscheneck - Dümmlerhütte</h3>-->
     
     <p>Die Tour wurde auf 3 Tage aufgeteilt, kann aber natürlich auch in weniger absolviert werden.</p>
     
