--- a/tour2.html
+++ b/tour2.html
@@ -9,7 +9,7 @@
 <body class="geisswand">   <!-- durch class= wird das Hintergrundbild auf der Geisswandseite abgeändert, Klasse muss im style konfiguriert sein-->
   <!-- Header -->
   <header>
-    <h1>Fabian's Bergabenteuer</h1>
+    <h1>Geißwand</h1>
     <nav>
       <a href="index.html">Start</a>
       <a href="touren.html" aria-current="page">Tourenberichte</a>
@@ -33,7 +33,7 @@
   <main>
     <!--<h2>Tour 1 – Hochkönig</h2>   so wird eine Überschrift 2. Ordnung geschrieben, mit h3 wird es zu einer 3. Ordnung--> 
     <!-- <p></p> so wird eine normale Zeile eingefügt -->
-    <h3>Geißwand</h3>
+    <!--<h3>Geißwand</h3>->
     
     <p>Ausgangspunkt ist in Traunkirchen. Von Gmunden kommend vor dem Geißwandtunnel links abbiegen und richtung Traunkirchen fahren.</p>
     <p>nach 1-2 km sieht man links auf der Seeseite einen kostenpflichtigen Parkplatz bei dem man allerdings auch rechts in eine 180° Kehre einbiegen kann</p>
@@ -76,8 +76,7 @@
 
        // Mehrere GPX-Dateien einbinden
        const tracks = [
-         "assets/Geisswand/Geisswand.gpx",
-         "assets/Geisswand/Geisswand.kml"
+         "assets/Geisswand/Geisswand.gpx"
        ];
 
        tracks.forEach(file => {
@@ -96,7 +95,7 @@
     <!-- Ende einfügen GPS Datei </-->
     <!-- ------------------------------------------------------ Button zum Download der GPX-Datei------------------------------------------->  
     <!-- es wird 1 Button angezeigt -->
- <h4>GPX-Downloads</h4>
+ <h4>Downloads</h4>
   <div class="download-container">
     <a href="assets/Geisswand/Geisswand.gpx" download class="download-btn">GPX Tag 1</a>
     <a href="assets/Geisswand/Geisswand.kml" download class="download-btn">KML Tag 1</a>
