--- a/tour2.html
+++ b/tour2.html
@@ -33,7 +33,7 @@
   <main>
     <!--<h2>Tour 1 – Hochkönig</h2>   so wird eine Überschrift 2. Ordnung geschrieben, mit h3 wird es zu einer 3. Ordnung--> 
     <!-- <p></p> so wird eine normale Zeile eingefügt -->
-    <!--<h3>Geißwand</h3>->
+    <!--<h3>Geißwand</h3>-->
     
     <p>Ausgangspunkt ist in Traunkirchen. Von Gmunden kommend vor dem Geißwandtunnel links abbiegen und richtung Traunkirchen fahren.</p>
     <p>nach 1-2 km sieht man links auf der Seeseite einen kostenpflichtigen Parkplatz bei dem man allerdings auch rechts in eine 180° Kehre einbiegen kann</p>
