--- a/about.html
+++ b/about.html
@@ -20,10 +20,11 @@
   <main>
     <h2>Ein kurzes Update zu meiner Persöhnlichkeit:</h2>
     <p>Hallo</p>
-    <p>Ich heiße Fabian und bin sehr gerne in den Bergen unterwegs.</p>
-    <p>Großteils bin ich in den Bergen rund um den Attersee oder den Traunsee untweregs.</p>
-    <p>Die GPX Datein, welche zum Download bereitgestellt werden, wurden alle von mir persöhnlich aufgenommen. Leichte Abweichungen sind natürlich möglich.</p>
+    <p>Ich heiße Fabian, komme aus Oberösterreich und bin leidenschaftlich gerne in den Bergen unterwegs.</p>
+
+    <p>Die GPX und KML Datein, welche zum Download bereitgestellt werden, wurden alle von mir persöhnlich aufgenommen. Leichte Abweichungen sind natürlich möglich.</p>
     <p>Meine Zeitangeben richten sich nicht nach den angegebenen Zeiten, sondern nach jener Zeit, welche für einen geübten Bergsteiger realistisch sind. D.h. allerdings auch das Anfänger oder Genusswanderer immer etwas mehr einplanen sollten.</p>
+    <p>Manche meiner Touren eignen sich weiters besser für Trailrunning als zum Wandern. </p>
   </main>
 
   <footer>
