--- a/tour1.html
+++ b/tour1.html
@@ -39,9 +39,9 @@
     
     <h3>Tag 1</h3>
     <p>Ausgangspunkt ist der Parkplatz am Gleinkersee. Dieser ist gleichzeitig auch der Endpunkt des Rundgangs</p>
-    <p>Wir folgen den Wegpfeilern Richtung Roßleithen welche uns über Schotterstraßen bzw. asphaltierte Straßen zum Einstieg des Wadnerwegs zur Zellerhütte führen. Dieser befindet sich in der Nähe des Sensenwerkes Fuchs</p>
+    <p>Wir folgen den Wegpfeilern Richtung Roßleithen, welche uns über Schotterstraßen bzw. asphaltierte Straßen zum Einstieg des Wanderwegs zur Zellerhütte führen.(Nähe Sensenwerk)</p>
     <p>Von dort aus geht es dann anfangs relativ entspannt durch den Wald aufwärts.</p>
-    <p>Nach ca. 1,5h Stunden wird es dann leicht steiler und auch felsiger bis man schlussendlich die Zellerhütte erreicht</p>
+    <p>Nach ca. 1,5h Stunden wird es dann leicht steiler und auch felsiger, bis man schlussendlich die Zellerhütte erreicht.</p>
     <p>Das Ziel von Tag 1 war erreicht und einem gemütlichen Hüttenabend stand nichts mehr im Wege</p>
    
     <!-- Weitere Details / Highlights -->
@@ -57,12 +57,12 @@
     </section>
     <!-- --------------------------------------------------------------- Tag2 --------------------------->
     <h3>Tag 2</h3>
-    <p>Von der Zellerhütte geht es los zum erstem kleine Gipfel, dem Schallerkogel. Dieser beeindruckt mit einem kleinem aber feinem Gipfelkreuz und einer atemberaubeneden Aussicht</p>
-    <p>Nach einer kurzen Pause geht es weiter zum Lagelsberg welcher bereits über 2000m liegt. Hier machten wir nochmals Rast bevor es weiter zum Warscheneck ging</p>
-    <p>Am Gipfel hatte es, obwohl wir mitten im August unterwegs waren, nur 1°C. Darum musste die Gipfelpause warten und nach wenigen Minuten gingen wir auch schon wieder weiter</p>
+    <p>Von der Zellerhütte geht es los zum erstem kleine Gipfel, dem Schallerkogel. Dieser beeindruckt mit einem kleinem aber feinem Gipfelkreuz und einer atemberaubenden  Aussicht.</p>
+    <p>Nach einer kurzen Pause geht es weiter zum Lagelsberg, welcher bereits über 2000m liegt. Hier machten wir nochmals Rast bevor es weiter zum Warscheneck ging.</p>
+    <p>Am Gipfel hatte es, obwohl wir mitten im August unterwegs waren, nur 1°C. Darum musste die Gipfelpause warten und nach wenigen Minuten gingen wir auch schon wieder weiter.</p>
     <p>Von nun an ging es abwärts. Aufgrund des sehr dichten Nebels übersahen wir allerdings den Toten Mann, welcher ebenfalls einer der vielen Gipfel auf dieser Route ist</p>
-    <p>Darum war unser nächster Stopp die Rote Wand welche mit ihrer namensgebenden Felswand beeindruckt</p>
-    <p>Nach einer kurzen Pause beim Gipfelkreuz ging es weiter abwärts zu unserm heutigen Ziel, der Dümmlerhütte</p>
+    <p>Darum war unser nächster Stopp die Rote Wand, die mit ihrer namensgebenden Felswand beeindruckt.</p>
+    <p>Nach einer kurzen Pause beim Gipfelkreuz ging es erneut abwärts zu unserm heutigen Ziel, der Dümmlerhütte.</p>
     <!-- Weitere Details / Highlights -->
     <section>
       <h4>Details der Tour</h4>
@@ -76,8 +76,8 @@
     </section>
     <!-- --------------------------------------------------------------- Tag3 --------------------------->
     <h3>Tag 3</h3>
-    <p>Von der Dümmlerhütte ging es talwärts zum Gleinkersee</p>
-    <p>Es würde die Möglichkeit bestehen beim Absteig noch auf den Seespitz zu gehen (Auf und Abstiegszeit insgesamt ca. 2h) </p>
+    <p>Von der Dümmlerhütte ging es talwärts zum Gleinkersee.</p>
+    <p>Es würde die Möglichkeit bestehen, beim Abstieg noch auf den Seespitz zu gehen (Auf und Abstiegszeit insgesamt ca. 2h). </p>
     <p>Da wir allerdings das Baden im Gleinkersee bevorzugten, nahmen wir diesen Gipfel nicht mehr mit</p>
     <!-- Weitere Details / Highlights -->
     <section>
