--- a/tour3.html
+++ b/tour3.html
@@ -105,8 +105,8 @@
     <!-- es wird 1 Button angezeigt -->
  <h4>Downloads</h4>
   <div class="download-container">
-    <a href="assets/Katzenstein/Katzenstein.gpx" download class="download-btn">GPX Tag 1</a>
-    <a href="assets/Katzenstein/Katzenstein.kml" download class="download-btn">KML Tag 1</a>
+    <a href="assets/Katzenstein/Katzenstein.gpx" download class="download-btn">GPX</a>
+    <a href="assets/Katzenstein/Katzenstein.kml" download class="download-btn">KML</a>
   </div>
     
     <!-- ------------------------------------------------------ Bilder------------------------------------------>  
