--- a/touren.html
+++ b/touren.html
@@ -24,8 +24,8 @@
     <div class="tour-liste">
       <a class="btn" href="tour1.html">Warscheneck Überschreitung 2388m</a>
       <a class="btn" href="tour2.html">Geißwand 872m</a>
-      <a class="btn" href="tour3.html">Katzenstein 1349 via Grünberg</a>
-      <!--<a class="btn" href="tour4.html">Tour 4 – Dachstein</a>-->
+      <a class="btn" href="tour3.html">Katzenstein 1349m via Grünberg</a>
+      <a class="btn" href="tour4.html">Kleiner und Großer Sonnstein 923m, 1037m</a>
       <!--<a class="btn" href="tour5.html">Tour 5 – Karwendel</a>-->
     </div>
   </main>
