--- a/tour2.html
+++ b/tour2.html
@@ -34,7 +34,8 @@
     <!--<h2>Tour 1 – Hochkönig</h2>   so wird eine Überschrift 2. Ordnung geschrieben, mit h3 wird es zu einer 3. Ordnung--> 
     <!-- <p></p> so wird eine normale Zeile eingefügt -->
     <!--<h3>Geißwand</h3>-->
-    
+    <section class="info-box">
+      <h3>Route</h3>
     <p>Ausgangspunkt ist in Traunkirchen. Von Gmunden kommend vor dem Geißwandtunnel links abbiegen und Richtung Traunkirchen fahren.</p>
     <p>Nach 1-2 km sieht man links auf der Seeseite einen kostenpflichtigen Parkplatz bei dem man allerdings auch rechts in eine 180° Kehre einbiegen kann</p>
     <p>Die Schotterstraße kurz hochfahren und schon ist man auf einem gebührenfreien Parkplatz</p>
@@ -44,7 +45,7 @@
     <p>Kurz vor dem Gipfel erreicht man eine atemberaubende Felswand mit einigen Kletterrouten</p>
     <p>Danach sind es nur noch wenige Meter bis man schließlich noch eine kurze Kraxxlpassage erreicht welche direkt zum kleinen, aber feinem Gipfelkreuz führt.</p>
     <!-- Weitere Details / Highlights -->
-    <section>
+    
       <h4>Details der Tour</h4>
       <ul>
         <li>Höhenmeter: 470 m</li>
